--- a/gibizera/build.xml
+++ b/gibizera/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="gibizera" default="default" basedir=".">
-    <description>Builds, tests, and runs the project gibizera.</description>
+<project name="Gibizera" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Gibizera.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
